# wasm-nomad-kubernetes-workbench

./: .gitignore  README.md
bench/: README.md
bench/kubernetes/: 01-concurrent-execution.sh  01-function-deployment.sh  01-serial-execution.sh  MESSAGES.json  kube-init.csv  py.py
bench/kubernetes/spin/: rust-spin-n-body-concurrent-execution.csv  rust-spin-user-manager-concurrent-execution.csv
bench/kubernetes/wasmedge/: rust-wasmedge-audio-sine-wave-concurrent-execution.csv  rust-wasmedge-audio-sine-wave-serial.csv  rust-wasmedge-fuzzysearch-http-concurrent-execution.csv  rust-wasmedge-fuzzysearch-http-socket-concurrent-execution.csv  rust-wasmedge-n-body-serial.csv  rust-wasmedge-n-body-socket-concurrent-execution.csv  rust-wasmedge-prime-numbers-concurrent-execution.csv  rust-wasmedge-user-manager-socket-serial-donotuse.csv  rust-wasmedge-whatlang-serial.csv  rust-wasmedge-whatlang-socket-concurrent-execution.csv  rust-wasmedge-whatlang-socket-serial.csv
bench/nomad/: 01-concurrent-execution.sh  01-serial-execution.sh  nomad-init.csv  nomad-py.py
bench/nomad/concurrent/: 01-concurrent-execution.sh  rust-spin-aes-concurrent-execution.csv  rust-spin-audio-sine-wave-concurrent-execution.csv  rust-spin-fuzzysearch-http-concurrent-execution.csv  rust-spin-n-body-concurrent-execution.csv  rust-spin-prime-numbers-concurrent-execution.csv  rust-spin-user-manager-concurrent-execution.csv  rust-spin-whatlang-concurrent-execution.csv  rust-wasmedge-aes-concurrent-execution.csv  rust-wasmedge-audio-sine-wave-concurrent-execution.csv  rust-wasmedge-fuzzysearch-http-concurrent-execution.csv  rust-wasmedge-fuzzysearch-http-socket-concurrent-execution.csv  rust-wasmedge-n-body-concurrent-execution.csv  rust-wasmedge-n-body-socket-concurrent-execution.csv  rust-wasmedge-prime-numbers-concurrent-execution.csv  rust-wasmedge-prime-numbers-socket-concurrent-execution.csv  rust-wasmedge-user-manager-concurrent-execution.csv  rust-wasmedge-user-manager-socket-concurrent-execution.csv  rust-wasmedge-whatlang-concurrent-execution.csv  rust-wasmedge-whatlang-socket-concurrent-execution.csv
bench/nomad/function/: 01-function-deployment.sh  rust-spin-aes-function-deployment.csv  rust-spin-audio-sine-wave-function-deployment.csv  rust-spin-fuzzysearch-http-function-deployment.csv  rust-spin-n-body-function-deployment.csv  rust-spin-prime-numbers-function-deployment.csv  rust-spin-user-manager-function-deployment.csv  rust-spin-whatlang-function-deployment.csv  rust-wasmedge-aes-function-deployment.csv  rust-wasmedge-audio-sine-wave-function-deployment.csv  rust-wasmedge-fuzzysearch-http-function-deployment.csv  rust-wasmedge-fuzzysearch-http-socket-function-deployment.csv  (+8 more)
configs/kubernetes/: rust-spin-aes.yaml  rust-spin-audio-sine-wave.yaml  rust-spin-fuzzysearch-http.yaml  rust-spin-n-body.yaml  rust-spin-prime-numbers.yaml  rust-spin-user-manager.yaml  rust-spin-whatlang.yaml  rust-wasmedge-aes.yaml  rust-wasmedge-audio-sine-wave.yaml  rust-wasmedge-fuzzysearch-http-socket.yaml  rust-wasmedge-fuzzysearch-http.yaml  rust-wasmedge-n-body-socket.yaml  rust-wasmedge-n-body.yaml  rust-wasmedge-prime-numbers-socket.yaml  rust-wasmedge-prime-numbers.yaml  rust-wasmedge-user-manager-socket.yaml  rust-wasmedge-user-manager.yaml  rust-wasmedge-whatlang-socket.yaml  rust-wasmedge-whatlang.yaml
configs/nomad/: leader.hcl  rust-spin-audio-sine-wave.nomad  rust-spin-fuzzysearch-http.nomad  rust-spin-whatlang.nomad  rust-wasmedge-fuzzysearch-http-socket.nomad  rust-wasmedge-fuzzysearch-http.nomad  rust-wasmedge-n-body.nomad  rust-wasmedge-whatlang-socket.nomad  traefik.nomad
nomad_config/: follower.hcl  rust-spin-aes.nomad  rust-spin-audio-sine-wave.nomad  rust-spin-audio_sine_wave.nomad  rust-spin-fuzzysearch-http.nomad  rust-spin-fuzzysearch_http.nomad  rust-spin-n-body.nomad  rust-spin-n_body.nomad  rust-spin-prime-numbers.nomad  rust-spin-prime_numbers.nomad  rust-spin-user-manager.nomad  rust-spin-user_manager.nomad  rust-spin-whatlang.nomad  rust-wasmedge-aes.nomad  rust-wasmedge-audio-sine-wave.nomad  rust-wasmedge-fuzzysearch-http-socket.nomad  rust-wasmedge-fuzzysearch-http.nomad  rust-wasmedge-fuzzysearch_http.nomad  rust-wasmedge-fuzzysearch_http_socket.nomad  rust-wasmedge-n-body-socket.nomad  rust-wasmedge-n-body.nomad  rust-wasmedge-n_body.nomad  rust-wasmedge-n_body_socket.nomad  rust-wasmedge-prime-numbers-socket.nomad  rust-wasmedge-prime-numbers.nomad  rust-wasmedge-prime_numbers.nomad  rust-wasmedge-prime_numbers_socket.nomad  rust-wasmedge-user-manager-socket.nomad  rust-wasmedge-user-manager.nomad  rust-wasmedge-user_manager.nomad  rust-wasmedge-user_manager_socket.nomad  rust-wasmedge-whatlang-socket.nomad  rust-wasmedge-whatlang.nomad  rust-wasmedge-whatlang_socket.nomad  traefik.nomad
tests/: build.sh  gen_kube_templ.sh  gen_nomad_templ.sh
tests/rust-spin/: build.sh
tests/rust-spin/aes/: Cargo.toml
tests/rust-spin/aes/src/: lib.rs
tests/rust-spin/audio_sine_wave/: Cargo.toml  lib.rs  spin.toml
tests/rust-spin/audio_sine_wave/src/: main.rs
tests/rust-spin/user-manager/: Cargo.toml
tests/rust-wasmedge/: build.sh
tests/rust-wasmedge/aes/: Cargo.toml
tests/rust-wasmedge/aes/src/: main.rs
tests/rust-wasmedge/audio_sine_wave/: Cargo.toml  build.sh  main.rs
tests/rust-wasmedge/fuzzysearch-http-socket/: Cargo.toml
tests/rust-wasmedge/fuzzysearch-http-socket/src/: main.rs
tests/rust-wasmedge/fuzzysearch_http/: Cargo.toml  build.sh
tests/rust-wasmedge/fuzzysearch_http/src/: main.rs
tests/rust-wasmedge/n_body_socket/: Cargo.toml
tests/rust-wasmedge/n_body_socket/src/: main.rs
tests/rust-wasmedge/user-manager-socket/: Cargo.toml  spin.sig
tests/rust-wasmedge/user-manager-socket/src/: main.rs
tests/rust-wasmedge/user_manager/: Cargo.toml
tests/rust-wasmedge/user_manager/src/: main.rs
tests/rust-wasmedge/whatlang/: Cargo.toml  build.sh
tests/rust-wasmedge/whatlang-socket/: Cargo.toml
tests/rust-wasmedge/whatlang-socket/src/: main.rs
tests/rust-wasmedge/whatlang/src/: main.rs
tests/setup_user_manager/: docker-compose.yml
(+151 files in other folders)
