[package]
name = "aes"
authors = ["eetu"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
# Useful crate to handle errors.
anyhow = "1"
# Crate to simplify working with bytes.
bytes = "1"
# General-purpose crate with common HTTP types.
http = "0.2"
# The Spin SDK.
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.4.1" }
url = "1.4.0"
aes = "0.7"
base64 = "0.13"
block-modes = "0.8"
rand = "0.8"


[workspace]
