[package]
name = "audio-sine-wave"
authors = ["eetu", "Vojdan <vojdan@outlook.com>", "eetu"]
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
hound = "3.5.0"
# Useful crate to handle errors.
anyhow = "1"
# Crate to simplify working with bytes.
bytes = "1"
# General-purpose crate with common HTTP types.
http = "0.2"
url = "1.4.0"
httpcodec = "0.2.3"
bytecodec = "0.4.15"
# The Spin SDK.
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.4.1" }

[workspace]
