[package]
name = "aes"
authors = ["eetu"]
description = ""
version = "0.1.0"
edition = "2021"

[dependencies]
# Useful crate to handle errors.
anyhow = "1"
# Crate to simplify working with bytes.
bytes = "1"
# General-purpose crate with common HTTP types.
http = "0.2"
httpcodec = "0.2.3"
bytecodec = "0.4.15"
wasmedge_wasi_socket = "0.4"
url = "1.4.0"
aes = "0.7"
base64 = "0.13"
block-modes = "0.8"
rand = "0.8"


[workspace]
