[package]
name = "fuzzysearch-http"
authors = ["eetu","Vojdan <vojdan@outlook.com>"]
description = ""
version = "0.1.0"
edition = "2021"

#[lib]
#crate-type = [ "cdylib" ]

[dependencies]
# Useful crate to handle errors.
anyhow = "1"
# Crate to simplify working with bytes.
bytes = "1"
# General-purpose crate with common HTTP types.
http = "0.2"
httpcodec = "0.2.3"
bytecodec = "0.4.15"
wasmedge_wasi_socket = "0.4"
simsearch = "0.2"
url = "1.4.0"

[workspace]
