[package]
name = "fuzzysearch_http"
authors = ["eetu","Vojdan <vojdan@outlook.com>"]
description = ""
version = "0.1.0"
edition = "2021"

#[lib]
#crate-type = [ "cdylib" ]

[dependencies]
# Useful crate to handle errors.
anyhow = "1"
# Crate to simplify working with bytes.
bytes = "1"
# General-purpose crate with common HTTP types.
http = "0.2"
httpcodec = "0.2.3"
bytecodec = "0.4.15"
# Tokio WASI
tokio_wasi = { version = "1", features = ["rt", "macros", "net", "time", "io-util"]}
# hyper WASI, HTTP lib
hyper_wasi = { version = "0.15", features = ["full"]}
simsearch = "0.2"
url = "1.4.0"

[workspace]
