[package]
name = "user-manager"
authors = ["eetu", "Vojdan <vojdan@outlook.com>", "eetu"]
description = ""
version = "0.1.0"
edition = "2021"

[dependencies]
# Useful crate to handle errors.
anyhow = "1"
# Crate to simplify working with bytes.
bytes = "1"
# General-purpose crate with common HTTP types.
http = "0.2"
httpcodec = "0.2.3"
bytecodec = "0.4.15"
wasmedge_wasi_socket = "0.4"
#For out requests
reqwest_wasi = { version = "0.11", features = ["json"] }
http_req_wasi  = "0.10"
url = "1.4.0"
fake = "2.5"
rand = "0.8"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"

[workspace]
