[package]
name = "whatlang"
authors = ["eetu"]
description = ""
version = "0.1.0"
edition = "2021"

[dependencies]
# Useful crate to handle errors.
anyhow = "1"
# Crate to simplify working with bytes.
bytes = "1"
# General-purpose crate with common HTTP types.
http = "0.2"
# Tokio WASI
tokio_wasi = { version = "1", features = ["rt", "macros", "net", "time", "io-util"]}
# hyper WASI, HTTP lib
hyper_wasi = { version = "0.15", features = ["full"]}
whatlang = "0.16.1"
url = "1.4.0"

[workspace]
